--- a/app/views/allcharacters.html
+++ b/app/views/allcharacters.html
@@ -1,20 +1,4 @@
 <div class="page-header">
   <h1>List of Characters</h1>
 </div>
-<div class="row">
-  <div class="col-md-12">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Link to Character</th>
-          <th>Random Info</th>
-          <th>Random Info</th>
-          <th>Random Info</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{{table td}}}
-      </tbody>
-    </table>
-  </div>
-</div>
+{{> table}}
