--- a/app/views/move.html
+++ b/app/views/move.html
@@ -1,20 +1,4 @@
 <div class="page-header">
   <h1>Info about {{move}}</h1>
 </div>
-<div class="row">
-  <div class="col-md-12">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>userID</th>
-          <th>postID</th>
-          <th>Title</th>
-          <th>Content</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{{table td}}}
-      </tbody>
-    </table>
-  </div>
-</div>
+{{> table}}
