--- a/app/views/layouts/default.html
+++ b/app/views/layouts/default.html
@@ -7,14 +7,15 @@
     
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="/public/images/favicon.ico">
 
     <title>Melee Authority</title>
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" rel="stylesheet">
-    
-    <link href="/public/custom.css" rel="stylesheet">
+    <link href="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet" />
+
+    <link href="/public/css/custom.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -52,5 +53,8 @@
       $("head").prepend('<link rel="stylesheet" href="css/bootstrap.min.css">');
       $("head").prepend('<link rel="stylesheet" href="css/bootstrap-theme.min.css">');}});
     </script>
+    <script src="//cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
+    <script src="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+    <script src="/public/js/custom.js"></script>
   </body>
 </html>
