--- a/app/views/character.html
+++ b/app/views/character.html
@@ -1,10 +1,8 @@
-<div class="page-header">
-  <h1>Tables</h1>
-</div>
 <div class="row">
-  <div class="col-md-12">
-    <table class="table table-striped">
-      {{{table td}}}
-    </table>
-  </div>
+<div class="col-md-4">
+{{> table vertical='Character attributes'}}
+</div>
+<div class="col-md-8">
+{{> table normal='Moveset'}}
+</div>
 </div>
