--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,1 +1,1 @@
-<h4>Have any questions or suggestions? email us at <a href="mailto:melee@example.com">melee@example.com</a></h4>
+<h4>Have any questions or suggestions? email us at <a href="mailto:melee@meleeauthority.com">melee@meleeauthority.com</a></h4>
