--- a/app/views/partials/table.html
+++ b/app/views/partials/table.html
@@ -1,3 +1,30 @@
-<table class="table table-striped table-bordered">
-  {{{table td}}}
+{{#if normal}}
+  <h3 style="text-align: center; width: 100%">{{normal}}</h3>
+  <table class="table table-striped table-bordered">
+    {{{table normaltd}}}
+  </table>
+{{/if}}
+
+{{#if datatable}}
+  <h3 style="text-align: center; width: 100%">{{normal}}</h3>
+  <table class="datatable table table-striped table-bordered">
+    {{{table datatabletd}}}
+  </table>
+{{/if}}
+
+{{#if frames}}
+<table class="datatable table table-striped table-bordered">
+  {{table td}}
 </table>
+{{/if}}
+
+{{#if vertical}}
+  <h3 style="text-align: center; width: 100%">{{vertical}}</h3>
+  {{#if frame}}
+    <table class="table table-bordered" id="framestrip" style="width: 100%">
+  {{else}}
+    <table class="table table-striped table-bordered" style="width: 100%">
+  {{/if}}
+    {{verticaltable verticaltd}}
+  </table>
+{{/if}}
