--- a/app/public/css/custom.css
+++ b/app/public/css/custom.css
@@ -1,16 +1,21 @@
 body {
-  padding-top: 70px;
-  padding-bottom: 30px;
+   padding-top: 70px;
+   padding-bottom: 30px;
+}
+
+h1 {
+   margin-top: 15px;
+   margin-bottom: 15px;
 }
 
 .theme-dropdown .dropdown-menu {
-  position: static;
-  display: block;
-  margin-bottom: 20px;
+   position: static;
+   display: block;
+   margin-bottom: 20px;
 }
 
 .theme-showcase .navbar .container {
-  width: auto;
+   width: auto;
 }
 
 .jumbotron {
@@ -23,17 +28,42 @@ body {
 }
 
 #framestrip td, #framestrip th{
-   width: 30px;
-   height: 30px;
    vertical-align: middle;
 }
 
 #framestrip td {
+   min-width: 30px;
+   min-height: 30px;
+   width: 30px;
+   height: 30px;
    text-align: center;
    padding: 0px;
 }
 
 #framestrip th {
+   width: 100px;
    text-align: right;
-   padding-right: 5px;
+   padding: 0px 10px 0px 0px;
 }
+
+table.table-bordered thead th, table.table-bordered thead td,
+table.table-bordered tbody th, table.table-bordered tbody td {
+   vertical-align: middle;
+}
+
+table.table-bordered th {
+   text-align: right;
+}
+
+table.table-bordered td {
+   text-align: center;
+}
+
+.dataTables_wrapper .row {
+   display: flex;
+   align-items: center;
+}
+
+
+
+
