--- a/app/views/allcharacters.html
+++ b/app/views/allcharacters.html
@@ -1,4 +1,4 @@
 <div class="page-header">
   <h1>List of Characters</h1>
 </div>
-{{> table normal='List of Characters'}}
+{{> table datatable='List of Characters'}}
