--- a/app/views/character.html
+++ b/app/views/character.html
@@ -1,8 +1,8 @@
 <div class="row">
-<div class="col-md-4">
+<div class="col-md-3">
 {{> table vertical='Character attributes'}}
 </div>
-<div class="col-md-8">
-{{> table normal='Moveset'}}
+<div class="col-md-9">
+{{> table hitboxv='Hitboxes'}}
 </div>
 </div>
