--- a/app/views/move.html
+++ b/app/views/move.html
@@ -1,4 +1,6 @@
 <div class="page-header">
   <h1>Info about {{move}}</h1>
 </div>
+<div class="row" style="display: inline-block;">
 {{> table vertical='Frame Strip' frame=true}}
+</div>
