--- a/app/views/move.html
+++ b/app/views/move.html
@@ -1,6 +1,14 @@
 <div class="page-header">
   <h1>Info about {{move}}</h1>
 </div>
-<div class="row" style="display: inline-block;">
-{{> table vertical='Frame Strip' frame=true}}
+
+<div class="row" style="display: inline-block; margin-left: -6px">
+  {{> table hitboxv='Hitboxes'}}
 </div>
+
+<br>
+
+<div class="row" style="display: inline-block; margin-left: -6px">
+  {{> table vertical='Frame Strip' frame=true}}
+</div>
+
