--- a/app/views/partials/table.html
+++ b/app/views/partials/table.html
@@ -14,14 +14,14 @@
 
 {{#if hitboxv}}
   <h3 style="text-align: center; width: 100%">{{hitboxv}}</h3>
-  <table class="table table-striped table-bordered">
+  <table class="table table-striped table-bordered" id="hitbox">
     {{hitboxvertical hitboxtd}}
   </table>
 {{/if}}
 
 {{#if hitbox}}
   <h3 style="text-align: center; width: 100%">{{hitbox}}</h3>
-  <table class="table table-striped table-bordered">
+  <table class="table table-striped table-bordered" id="hitbox">
     {{hitbox hitboxtd}}
   </table>
 {{/if}}
