replaced lorem ipsum text with a couple sentences

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,14 +3,6 @@
 </div>
 <div>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus auctor congue felis, ac commodo leo sagittis eu. Sed auctor placerat tincidunt. Suspendisse vulputate egestas rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla in iaculis nulla. Sed libero ante, malesuada sit amet ligula ac, viverra maximus neque. In condimentum eleifend mattis. Proin venenatis ex orci, a condimentum nibh dignissim eget. Sed in faucibus nulla. Vivamus in velit nisi. Vivamus rhoncus laoreet finibus. Donec ac ipsum ultrices, malesuada ex ac, tincidunt lectus. Nullam vehicula convallis elit, vitae egestas quam condimentum eu.
-  </p>
-</div>
-<div class="page-header">
-  <h1>What is 'Melee'?</h1>
-</div>
-<div>
-  <p>
-    Nulla porttitor congue ullamcorper. Nam et diam faucibus, imperdiet justo sit amet, malesuada lorem. In maximus, eros et malesuada iaculis, metus ligula rhoncus tortor, quis fringilla mi erat quis mi. Morbi a lobortis turpis. Sed ac tellus sapien. Praesent id ultricies augue, in pulvinar turpis. Phasellus blandit justo enim, interdum tempus turpis aliquet id. Proin ultrices a ante id viverra. In mollis felis id felis volutpat, semper hendrerit sapien varius. Morbi vehicula viverra velit, non efficitur libero ullamcorper eu. Duis laoreet feugiat elit. Aliquam sem ipsum, consequat sit amet neque luctus, consectetur venenatis lectus.
+    Melee Authority is a website created to provide authoritative melee frame data from the web. We have frame strips, character attributes, and more!
   </p>
 </div>
