Got framestrips working

--- a/app/public/css/custom.css
+++ b/app/public/css/custom.css
@@ -96,3 +96,8 @@ table tr.separator:nth-of-type(odd) {
 table #sep2 td {
    border-top-width: 0px;
 }
+
+.builder {
+   display: inline-block;
+   border: 1px solid #333;
+}
