--- a/app/views/layouts/default.html
+++ b/app/views/layouts/default.html
@@ -55,6 +55,7 @@
     </script>
     <script src="//cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
     <script src="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+    <script src="/public/js/helpers.js"></script>
     <script src="/public/js/custom.js"></script>
   </body>
 </html>
