Added analysis page, fixed framestrips dropdowns

--- a/app/views/analysis.html
+++ b/app/views/analysis.html
@@ -1,1 +1,137 @@
-<h4>Have any questions or suggestions? email us at <a href="mailto:melee@meleeauthority.com">melee@meleeauthority.com</a></h4>
+<div class="page-header">
+  <h1>Statistical Analysis<h1>
+</div>
+<div>
+  <h3>Quickest Aerial Hitboxes per Character</h3>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Character</th>
+        <th>Move</th>
+        <th>Earliest Hitbox Frame</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr><th>Doctor Mario</th><th>Neutral-Air</th><th>3</th></tr>
+        <tr><th>Ice Climbers</th><th>Down-Air</th><th>3</th></tr>
+        <tr><th>Luigi</th><th>Neutral-Air</th><th>3</th></tr>
+        <tr><th>Mario</th><th>Neutral-Air</th><th>3</th></tr>
+        <tr><th>Peach</th><th>Neutral-Air</th><th>3</th></tr>
+        <tr><th>Pichu</th><th>Neutral-Air</th><th>3</th></tr>
+        <tr><th>Pikachu</th><th>Neutral-Air</th><th>3</th></tr>
+        <tr><th>Pikachu</th><th>Up-Air</th><th>3</th></tr>
+        <tr><th>Sheik</th><th>Neutral-Air</th><th>3</th></tr>
+        <tr><th>Yoshi</th><th>Neutral-Air</th><th>3</th></tr>
+        <tr><th>Falco</th><th>Neutral-Air</th><th>4</th></tr>
+        <tr><th>Falco</th><th>Back-Air</th><th>4</th></tr>
+        <tr><th>Fox</th><th>Neutral-Air</th><th>4</th></tr>
+        <tr><th>Fox</th><th>Back-Air</th><th>4</th></tr>
+        <tr><th>Link</th><th>Neutral-Air</th><th>4</th></tr>
+        <tr><th>Marth</th><th>Forward-Air</th><th>4</th></tr>
+        <tr><th>Young Link</th><th>Neutral-Air</th><th>4</th></tr>
+        <tr><th>Mewtwo</th><th>Forward-Air</th><th>5</th></tr>
+        <tr><th>Ness</th><th>Neutral-Air</th><th>5</th></tr>
+        <tr><th>Roy</th><th>Forward-Air</th><th>5</th></tr>
+        <tr><th>Roy</th><th>Up-Air</th><th>5</th></tr>
+        <tr><th>Samus</th><th>Neutral-Air</th><th>5</th></tr>
+        <tr><th>Samus</th><th>Up-Air</th><th>5</th></tr>
+        <tr><th>Zelda</th><th>Back-Air</th><th>5</th></tr>
+        <tr><th>Captain Falcon</th><th>Up-Air</th><th>6</th></tr>
+        <tr><th>Donkey Kong</th><th>Up-Air</th><th>6</th></tr>
+        <tr><th>Ganondorf</th><th>Up-Air</th><th>6</th></tr>
+        <tr><th>Jigglypuff</th><th>Neutral-Air</th><th>6</th></tr>
+        <tr><th>Kirby</th><th>Back-Air</th><th>6</th></tr>
+        <tr><th>Game and Watch</th><th>Up-Air</th><th>7</th></tr>
+        <tr><th>Bowser</th><th>Neutral-Air</th><th>8</th></tr>
+        <tr><th>Bowser</th><th>Forward-Air</th><th>8</th></tr>
+    </tbody>
+  </table>
+
+  <h3>Quickest Smash Hitboxes per Character</h3>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Character</th>
+        <th>Move</th>
+        <th>Earliest Hitbox Frame</th>
+      </tr>
+    </thead>
+    <tbody>
+   <tr><th>Zelda</th><th>Down-Smash</th><th>4</th></tr>
+   <tr><th>Doctor Mario</th><th>Down-Smash</th><th>5</th></tr>
+   <tr><th>Luigi</th><th>Down-Smash</th><th>5</th></tr>
+   <tr><th>Mario</th><th>Down-Smash</th><th>5</th></tr>
+   <tr><th>Marth</th><th>Down-Smash</th><th>5</th></tr>
+   <tr><th>Sheik</th><th>Down-Smash</th><th>5</th></tr>
+   <tr><th>Falco</th><th>Down-Smash</th><th>6</th></tr>
+   <tr><th>Fox</th><th>Down-Smash</th><th>6</th></tr>
+   <tr><th>Ice Climbers</th><th>Down-Smash</th><th>6</th></tr>
+   <tr><th>Roy</th><th>Down-Smash</th><th>6</th></tr>
+   <tr><th>Samus</th><th>Down-Smash</th><th>6</th></tr>
+   <tr><th>Yoshi</th><th>Down-Smash</th><th>6</th></tr>
+   <tr><th>Jigglypuff</th><th>Up-Smash</th><th>7</th></tr>
+   <tr><th>Kirby</th><th>Down-Smash</th><th>7</th></tr>
+   <tr><th>Pichu</th><th>Down-Smash</th><th>7</th></tr>
+   <tr><th>Pikachu</th><th>Up-Smash</th><th>8</th></tr>
+   <tr><th>Link</th><th>Down-Smash</th><th>9</th></tr>
+   <tr><th>Young Link</th><th>Down-Smash</th><th>9</th></tr>
+   <tr><th>Donkey Kong</th><th>Down-Smash</th><th>10</th></tr>
+   <tr><th>Ness</th><th>Down-Smash</th><th>12</th></tr>
+   <tr><th>Ness</th><th>Up-Smash</th><th>12</th></tr>
+   <tr><th>Game and Watch</th><th>Forward-Smash</th><th>13</th></tr>
+   <tr><th>Peach</th><th>Up-Smash</th><th>13</th></tr>
+   <tr><th>Bowser</th><th>Up-Smash</th><th>16</th></tr>
+   <tr><th>Captain Falcon</th><th>Forward-Smash(High)</th><th>18</th></tr>
+   <tr><th>Mewtwo</th><th>Forward-Smash</th><th>18</th></tr>
+   <tr><th>Ganondorf</th><th>Down-Smash</th><th>19</th></tr>
+    </tbody>
+  </table>
+
+  <h3>Quickest Tilt Hitboxes per Character</h3>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Character</th>
+        <th>Move</th>
+        <th>Earliest Hitbox Frame</th>
+      </tr>
+    </thead>
+    <tbody>
+   <tr><th>Ness</th><th>Down-Tilt</th><th>3</th></tr>
+   <tr><th>Doctor Mario</th><th>Forward-Tilt</th><th>4</th></tr>
+   <tr><th>Doctor Mario</th><th>Up-Tilt</th><th>4</th></tr>
+   <tr><th>Kirby</th><th>Down-Tilt</th><th>4</th></tr>
+   <tr><th>Kirby</th><th>Up-Tilt</th><th>4</th></tr>
+   <tr><th>Luigi</th><th>Forward-Tilt</th><th>4</th></tr>
+   <tr><th>Luigi</th><th>Up-Tilt</th><th>4</th></tr>
+   <tr><th>Mario</th><th>Up-Tilt</th><th>4</th></tr>
+   <tr><th>Falco</th><th>Up-Tilt</th><th>5</th></tr>
+   <tr><th>Falco</th><th>Forward-Tilt</th><th>5</th></tr>
+   <tr><th>Fox</th><th>Forward-Tilt</th><th>5</th></tr>
+   <tr><th>Fox</th><th>Up-Tilt</th><th>5</th></tr>
+   <tr><th>Mewtwo</th><th>Down-Tilt</th><th>5</th></tr>
+   <tr><th>Pichu</th><th>Forward-Tilt</th><th>5</th></tr>
+   <tr><th>Pikachu</th><th>Forward-Tilt</th><th>5</th></tr>
+   <tr><th>Sheik</th><th>Forward-Tilt</th><th>5</th></tr>
+   <tr><th>Sheik</th><th>Down-Tilt</th><th>5</th></tr>
+   <tr><th>Sheik</th><th>Up-Tilt</th><th>5</th></tr>
+   <tr><th>Zelda</th><th>Down-Tilt</th><th>5</th></tr>
+   <tr><th>Donkey Kong</th><th>Down-Tilt</th><th>6</th></tr>
+   <tr><th>Donkey Kong</th><th>Up-Tilt</th><th>6</th></tr>
+   <tr><th>Game and Watch</th><th>Down-Tilt</th><th>6</th></tr>
+   <tr><th>Ice Climbers</th><th>Forward-Tilt</th><th>6</th></tr>
+   <tr><th>Jigglypuff</th><th>Forward-Tilt</th><th>6</th></tr>
+   <tr><th>Marth</th><th>Up-Tilt</th><th>6</th></tr>
+   <tr><th>Peach</th><th>Forward-Tilt</th><th>6</th></tr>
+   <tr><th>Samus</th><th>Down-Tilt</th><th>6</th></tr>
+   <tr><th>Samus</th><th>Forward-Tilt</th><th>6</th></tr>
+   <tr><th>Yoshi</th><th>Forward-Tilt</th><th>6</th></tr>
+   <tr><th>Bowser</th><th>Up-Tilt</th><th>7</th></tr>
+   <tr><th>Roy</th><th>Up-Tilt</th><th>7</th></tr>
+   <tr><th>Captain Falcon</th><th>Forward-Tilt</th><th>9</th></tr>
+   <tr><th>Ganondorf</th><th>Forward-Tilt</th><th>9</th></tr>
+   <tr><th>Link</th><th>Up-Tilt</th><th>9</th></tr>
+   <tr><th>Young Link</th><th>Up-Tilt</th><th>9</th></tr>
+    </tbody>
+  </table>
+</div>
